fix alignment

--- a/gulp/sass/layout.scss
+++ b/gulp/sass/layout.scss
@@ -217,6 +217,8 @@ html, body{
         font-size: 10.5rem;
         letter-spacing: 1.5rem;
         z-index: 2;
+        max-width: 90vw;
+        margin: 0 auto;
         &:before {
             @include pseudo-element;
             background: #E51747;
